html/css/style.scss
$bg-color: #fcebcf;
$nav-color: #ce9f51;
$serif-font-head: "Cantata One", serif;
$serif-font-sub: "Alatsi", serif;
$sans-serif-font: "Zen Maru Gothic", sans-bserif;
$font-color: #546121;

$slider-width: 500px;

html {
    padding: 0;
    margin: 0;
}

body {
    background-color: $bg-color;
    color: $font-color;
    font-family: $sans-serif-font;
    padding: 0;
    margin: 0;
}

a {
    color: $font-color;
}

.main-container {
    margin: auto;
    width: 80%;

    h2 {
        font-size: 2em;
    }
}

.subpage-title {
    font-family: $serif-font-head;
    font-size: 3em;

    @media all and (min-width: 800px) {
        font-size: 5em;
    }
}

p {
    font-size: 2em;
}

.title-container {
    display: flex;
    flex-flow: row wrap;

    margin: 0 2em;
    width: 80%;

    * {
        flex: 1 100%;
        padding: 20px;
    }
}

.title-block {

    h1 {
        font-family: $serif-font-head;
        font-size: 2em;
        margin: 0;
    }

    h2 {
        font-family: $serif-font-sub;
        font-size: 1em;
        margin: 0;
    }
}

#durango {
    margin-left: auto;
    margin-right: auto;
    display: block;
    width: 90%;
    border-radius: 10px;
}

.title-image {
    img {
        display: inline;
        border-radius: 30px;
        width: 100%;
    }
}

@media all and (min-width: 800px) {
    .title-block {
        flex: 2 0 0;

        h1 {
            font-size: 5em;
        }

        h2 {
            font-size: 3em;
        }
    }
}

@media all and (min-width: 1280px) {
    .title-container > * {
        flex: 1 0 0;
    }

    .title-block {
        flex: 2 0 0;

        h1 {
            font-size: 6em;
        }

        h2 {
            font-size: 2em;
        }
    }
}

.nav-bar {
    background-color: $nav-color;
    padding: 0 2em;
    padding-left: 0;
    position: relative;

    @media all and (max-width: 900px) {
        width: 100%;
    }
}

.nav-links {
    list-style: none;
    padding-left: 0;
    margin: 0;

    @media all and (max-width: 900px) {
        text-align: center;
    }

    li {
        padding: 0;
        display: inline-block;

        a {
            display: block;
            text-decoration: none;
            font-size: 2em;
            @media all and (min-width: 900px) {
                padding: .5em 1em;
            }

            @media all and (max-width: 900px) {
                padding: 1em;
                padding-top: 1em;
                font-size: .75em;
            }
        }
        
        &:hover {
            -moz-transition: background-color .2s ease-out;
            -o-transition: background-color .2s ease-out;
            -webkit-transition: background-color .2s ease-out;
            transition: background-color .2s ease-out;
            background-color: #bc6f40;
        } /* CSS is a fucking joke */
        -moz-transition: background-color .2s ease-out;
        -o-transition: background-color .2s ease-out;
        -webkit-transition: background-color .2s ease-out;
        transition: background-color .2s ease-out;
        background-color: $nav-color;
    }
}

.things-to-do, .deets {
    padding: 0;
    text-align: center;

    li {
        margin: .5em 0;
        h3 {
            font-size: 1.5em;
            margin: 0;
        }
        text-align: left;
        font-size: 1.5em;
        list-style: none;
    }
}

// CSS-only slider stolen from https://css-tricks.com/css-only-carousel/

.slider {
    width: $slider-width;
    text-align: center;
    overflow: hidden;
    margin-left: auto;
    margin-right: auto;
}

.slides {
    display: flex;

    overflow-x: auto;
    scroll-snap-type: x mandatory;

    scroll-behavior: smooth;
    -webkit-overflow-scrolling: touch;

    scroll-snap-points-x: repeat($slider-width);
    scroll-snap-type: mandatory;
}

.slides::-webkit-scrollbar {
    width: 10px;
    height: 10px;
}

.slides::-webkit-scrollbar-thumb {
    background: black;
    border-radius: 10px;
}

.slides::-webkit-scrollbar-track {
    background: transparent;
}

.slides > div {
    scroll-snap-align: start;
    flex-shrink: 0;
    width: $slider-width;
    height: $slider-width;
    margin-right: 50px;
    border-radius: 10px;
    background: #eee;
    transform-origin: center center;
    transform: scale(1);
    transition: transform 0.5s;
    position: relative;

    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 100px;
}
.slides > div:target {
    /*   transform: scale(0.8); */
}

.slider img {
    object-fit: cover;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border-radius: 10px;
}

.slider > a {
    display: inline-flex;
    width: 1.5rem;
    height: 1.5rem;
    background: white;
    text-decoration: none;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    margin: 0 0 0.5rem 0;
    position: relative;
}

.slider > a:active {
    top: 1px;
}

.slider > a:focus {
    background: #000;
}

/* Don't need button navigation */
@supports (scroll-snap-type) {
    .slider > a {
        display: none;
    }
}

